fix nav alignment in safari

--- a/styles/workshop.css
+++ b/styles/workshop.css
@@ -20,7 +20,6 @@
   position: relative;
   height: var(--margin);
   svg {
-    width: 100%;
     max-width: 100%;
     max-height: 100%;
   }
@@ -127,6 +126,8 @@
 
 .mcode-logo {
   /* display: none; */
+  width: calc(var(--padding) + (var(--padding) * 0.25));
+  height: var(--padding);
   fill: currentcolor;
   overflow: visible;
   .circle {
